Atuação de experiência: procob serviços

--- a/assets/css/orbit.css
+++ b/assets/css/orbit.css
@@ -50,7 +50,6 @@ p {
     background: #4B6A78;
     max-width: 960px;
     margin: 0 auto;
-    margin-top: 30px;
     position: relative;
     -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -318,6 +317,10 @@ p {
 }
 
 @media (max-width: 767.98px) {
+    .wrapper {
+        margin-top: 0px;
+    }
+
     .sidebar-wrapper {
         position: static;
         width: inherit;
@@ -339,6 +342,10 @@ p {
 }
 
 @media (min-width: 992px) {
+    .wrapper {
+        margin-top: 30px;
+    }
+
     .skillset .level-title {
         display: inline-block;
         float: left;
